<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_favorite" translatable="false">description_favorite</string>
    <string name="description_share" translatable="false">description_share</string>
    <string name="description_visibility" translatable="false">description_visibility</string>
    <string name="nmedia">NMedia!</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Create post</string>
    <string name="add_post">Add post</string>
    <string name="video_fragment">Video</string>
    <string name="video_play_button">Play video</string>
</resources>